Structured code module wise